Alter Tag Plains (Up/Down)

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
 			<h3 class="font-light-blue-a700">O que vem à sua cabeça quando você ouve a palavra Internet?</h3>
 
-			<p>Para muitos, informação, para outros, trabalho, diversão, cultura e conhecimento. Para nós da OAI, a internet aproxima pessoas e as coisas, como nenhum outro meio de <strong>comunicação</strong>, derrubando fronteiras e barreiras, com a liberdade de criar, se expressar e aparecer para o mundo, revelando maravilhas em pessoas comuns.</p>
+			<p>Para muitos, informação, para outros, trabalho, diversão, cultura e conhecimento. Para nós da OAI, a internet aproxima pessoas e as coisas como nenhum outro meio de comunicação, derrubando fronteiras e barreiras, com a liberdade de criar, se expressar e aparecer para o mundo, revelando assim as maravilhas em pessoas comuns.</p>
 
 			<p>Com essa motivação, trabalhamos a cada dia, inovando e expandindo para atender nossos assinantes, com os serviços de acesso à internet banda larga Residencial, Rural e Corporativo, conectando o mundo e aproximando pessoas e as coisas.</p>
 
@@ -259,8 +259,8 @@
 
 			<h3 class="font-light-blue-a700">Nossa história</h3>
 
-			<p>Fundada em 2004, a OAI atende a milhares de assinantes em todo o Brasil, com enfâse no estado de São Paulo, fornecendo serviços ao mercado residencial, rural e corporativo, com um atendimento exclusivo e tecnologia de ponta. Com constantes investimentos, a OAI amplia suas fronteiras a cada dia. </p>
-
+			<p>Fundada em 2004, a OAI atende a milhares de assinantes em todo o Brasil, fornecendo serviços ao mercado residencial, rural e corporativo, com um atendimento exclusivo e tecnologia de ponta.</p>
+			<p>Com constantes investimentos, a OAI amplia suas fronteiras a cada dia. Contamos com uma infraestrutura própria, provendo acesso à Internet Banda Larga e Telefonia IP, via Rádio, Cabo e Fibra Óptica (FTTx e Lan to Lan), nas cidades de Assis/SP, Echaporã/SP, Ibirarema/SP, Nossa Senhora Aparecida/PR, Nova Alexandria/SP, Oscar Bressane/SP, Palmital/SP e Platina/SP no estado de São Paulo e ADSL para todo o Estado de São de Paulo.</p>
 
 		</div>
 
@@ -321,6 +321,7 @@
 										<span>2 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 2Mbps</span>
 									<span class="PricelistItem-description">Up: 600kbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -329,6 +330,7 @@
 										<span>4 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 4Mbps</span>
 									<span class="PricelistItem-description">Up: 800kbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -337,6 +339,7 @@
 										<span>6 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 6Mbps</span>
 									<span class="PricelistItem-description">Up: 1.2Mbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -345,6 +348,7 @@
 										<span>8 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 8Mbps</span>
 									<span class="PricelistItem-description">Up: 1.6Mbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -353,6 +357,7 @@
 										<span>10 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 10Mbps</span>
 									<span class="PricelistItem-description">Up: 2Mbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -361,6 +366,7 @@
 										<span>12 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 12Mbps</span>
 									<span class="PricelistItem-description">Up: 2.4Mbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -369,6 +375,7 @@
 										<span>15 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 15Mbps</span>
 									<span class="PricelistItem-description">Up: 3Mbps</span>
 								</li>
 							</ul>
@@ -385,6 +392,7 @@
 										<span>1 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 1Mbps</span>
 									<span class="PricelistItem-description">Up: 600kbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -393,6 +401,7 @@
 										<span>2 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 2Mbps</span>
 									<span class="PricelistItem-description">Up: 600kbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -401,6 +410,7 @@
 										<span>4 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 4Mbps</span>
 									<span class="PricelistItem-description">Up: 800kbps</span>
 								</li>
 
@@ -417,6 +427,7 @@
 										<span>4 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 4Mbps</span>
 									<span class="PricelistItem-description">Up: 1.2Mbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -425,6 +436,7 @@
 										<span>6 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 6Mbps</span>
 									<span class="PricelistItem-description">Up: 1.8Mbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -433,6 +445,7 @@
 										<span>8 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 8Mbps</span>
 									<span class="PricelistItem-description">Up: 2.4Mbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -441,6 +454,7 @@
 										<span>10 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 10Mbps</span>
 									<span class="PricelistItem-description">Up: 3Mbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -449,6 +463,7 @@
 										<span>12 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 12Mbps</span>
 									<span class="PricelistItem-description">Up: 3.6Mbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -457,6 +472,7 @@
 										<span>15 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 15Mbps</span>
 									<span class="PricelistItem-description">Up: 4.5Mbps</span>
 								</li>
 								<li class="PricelistItem">
@@ -465,6 +481,7 @@
 										<span>20 MB</span>
 
 									</span>
+									<span class="PricelistItem-description">Down: 20Mbps</span>
 									<span class="PricelistItem-description">Up: 6Mbps</span>
 								</li>
 
@@ -502,11 +519,9 @@
 
 			<h2 class="font-light-blue-a700">Projetos Especiais</h2>
 
-			<p>Nossas soluções estão ligadas a expertise que adquirimos ao longo dos anos, atendendo a diversas empresas no segmento de telecomunicações. Altamente preparada oferecemos soluções em planejamento e elaboração de projetos para construção, instalação e manutenção de redes e sistemas de telecomunicações em todo território nacional.</p>
+			<p>Nossas soluções estão ligadas a expertise que adquirimos ao longo dos anos, atendendo a diversas empresas no segmento de telecomunicações. Altamente preparada, oferecemos soluções em planejamento e elaboração de projetos para construção, instalação e manutenção de redes e sistemas de telecomunicações em todo território nacional.</p>
 
-			<p>Elaboração e implantação de redes de fibra óptica (FTTx/FTTa/FTTh/L2L), metálica, canalizações subterrâneas e tecnologia ADSL. Serviços de infraestrutura de equipamentos como esteiramento, calhas, dutos e bastidores, instalação e testes de enlaces de rádio (faixa de 900 Mhz a 23 Ghz), modem óptico, switch, roteadores e ampliação de centrais telefônicas (IP).</p>
-
-			<p>Engenharia de rádio frequência envolvendo equipamentos <em>Wireless</em>, CDMA, 3G, GSM e LTE, assim como controle e operações integradas de Call Center IP, interligação de equipamentos de comunicação de dados, implantação de Backbone, anéis e troncos ópticos para ampliar a capacidade de tráfego das redes de transmissão.</p>
+			<p>Contamos com uma equipe de profissionais capacitada para elaborar e implantar redes de fibra óptica (FTTx/FTTa/FTTh/L2L), metálica, canalizações subterrâneas e tecnologia ADSL. Serviços de infraestrutura de equipamentos como esteiramento, calhas, dutos e bastidores, instalação e testes de enlaces de rádio (faixa de 900 Mhz a 23 Ghz), modem óptico, switch, roteadores e ampliação de centrais telefônicas (IP), assim como engenharia de rádio frequência envolvendo equipamentos Wireless, CDMA, 3G, GSM e LTE, controle e operações integradas de Call Center IP, interligação de equipamentos de comunicação de dados, implantação de Backbone, anéis e troncos ópticos para ampliar a capacidade de tráfego das redes de transmissão.</p>
 
 		</div>
 
