--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
 <script type="text/javascript">
 	var map;
-	var centerPos = new google.maps.LatLng(-22.689642,-50.302541);
+	var centerPos = new google.maps.LatLng(-22.609642,-50.4577229);
 	var zoomLevel = 10;
 	function initialize() {
 		var mapOptions = {
@@ -1033,7 +1033,7 @@
 							</div>
 
 							<div class="ContactForm-field ContactForm-field--phone">
-								<input class="phone-text" type="text" size="26" name="tPhone" id="cPhone" maxlength="11"
+								<input class="phone-text" type="text" size="26" name="tPhone" id="cPhone" maxlength="14"
 								       placeholder="Telefone"
 								       title="Ops, o campo telefone deve ser preenchido corretamente :)"
 								       x-moz-errormessage="Ops, o campo telefone deve ser preenchido corretamente :)"/>
@@ -1049,7 +1049,7 @@
 							</div>
 
 							<div class="ContactForm-field ContactForm-field--address">
-								<input class="phone-text" type="text" size="26" name="tAddress" id="cAddress" maxlength="11"
+								<input class="phone-text" type="text" size="26" name="tAddress" id="cAddress" maxlength="50"
 								       placeholder="Endereço Completo"
 								       title="Ops, o campo deve ser preenchido corretamente :)"
 								       x-moz-errormessage="Ops, o campo deve ser preenchido corretamente :)"/>
@@ -1057,7 +1057,7 @@
 							</div>
 
 							<div class="ContactForm-field ContactForm-field--address">
-								<input class="phone-text" type="text" size="26" name="tCity" id="cCity" maxlength="11"
+								<input class="phone-text" type="text" size="26" name="tCity" id="cCity" maxlength="25"
 								       placeholder="Cidade"
 								       title="Ops, o campo cidade deve ser preenchido corretamente :)"
 								       x-moz-errormessage="Ops, o campo cidade deve ser preenchido corretamente :)"/>
