--- a/index.html
+++ b/index.html
@@ -1025,7 +1025,7 @@
 						<div class="ContactForm-wrapper ContactForm-wrapper--personal-info flex flex-column">
 
 							<div class="ContactForm-field ContactForm-field--name">
-								<input class="name-text" type="text" size="26" name="tNome" id="cNome" maxlength="50"
+								<input class="name-text" type="text" size="26" name="tNome" required="required" id="cNome" maxlength="50"
 								       placeholder="Nome"
 								       title="Ops, o campo nome deve ser preenchido corretamente :)"
 								       x-moz-errormessage="Ops, o campo nome deve ser preenchido corretamente :)"/>
@@ -1033,7 +1033,7 @@
 							</div>
 
 							<div class="ContactForm-field ContactForm-field--phone">
-								<input class="phone-text" type="text" size="26" name="tPhone" id="cPhone" maxlength="14"
+								<input class="phone-text" type="text" size="26" name="tPhone" required="required" id="cPhone" maxlength="14"
 								       placeholder="Telefone"
 								       title="Ops, o campo telefone deve ser preenchido corretamente :)"
 								       x-moz-errormessage="Ops, o campo telefone deve ser preenchido corretamente :)"/>
@@ -1041,7 +1041,7 @@
 							</div>
 
 							<div class="ContactForm-field ContactForm-field--email">
-								<input class="email-text" type="email" size="26" name="tEmail" id="cEmail" maxlength="60"
+								<input class="email-text" type="email" size="26" name="tEmail" required="required" id="cEmail" maxlength="60"
 								       placeholder="E-mail"
 								       title="Ops, o campo deve ser preenchido corretamente :)"
 								       x-moz-errormessage="Ops, o campo deve ser preenchido corretamente :)"/>
@@ -1049,7 +1049,7 @@
 							</div>
 
 							<div class="ContactForm-field ContactForm-field--address">
-								<input class="phone-text" type="text" size="26" name="tAddress" id="cAddress" maxlength="50"
+								<input class="phone-text" type="text" size="26" name="tAddress" required="required" id="cAddress" maxlength="50"
 								       placeholder="Endereço Completo"
 								       title="Ops, o campo deve ser preenchido corretamente :)"
 								       x-moz-errormessage="Ops, o campo deve ser preenchido corretamente :)"/>
@@ -1057,7 +1057,7 @@
 							</div>
 
 							<div class="ContactForm-field ContactForm-field--address">
-								<input class="phone-text" type="text" size="26" name="tCity" id="cCity" maxlength="25"
+								<input class="phone-text" type="text" size="26" name="tCity" required="required" id="cCity" maxlength="25"
 								       placeholder="Cidade"
 								       title="Ops, o campo cidade deve ser preenchido corretamente :)"
 								       x-moz-errormessage="Ops, o campo cidade deve ser preenchido corretamente :)"/>
@@ -1069,7 +1069,7 @@
 						<div class="ContactForm-wrapper ContactForm-wrapper--personal-info flex flex-column">
 
 							<div class="ContactForm-field ContactForm-field--message">
-						<textarea class="lato" name="tMensagem" id="cMensagem" cols="36"
+						<textarea class="lato" name="tMensagem" required="required" id="cMensagem" cols="36"
 						          placeholder="Digite a sua mensagem"
 						          title="Ops, o campo mensagem deve ser preenchido corretamente :)"
 						          x-moz-errormessage="Ops, o campo mensagem deve ser preenchido corretamente :)"></textarea>
