Add new wallpapers

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
 </div>
 
-<span class="full-wide bg-cover photo" style="background-image: url('dist/img/largePhotos/tower3_telecom.jpg'); background-position: center 24%; height: 24em; width: 100%; float: left;"></span>
+<span class="full-wide bg-cover photo" style="background-image: url('dist/img/largePhotos/TELETOWER-Final.jpg'); background-psosition: 100% 100%; height: 24em; width: 100%; float: left;"></span>
 
 <div class="text grey-50 font-grey-800">
 
