--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="dist/js/villa.min.js"></script>
 <link rel="stylesheet" href="dist/css/villa.min.css"/>
 <link rel="stylesheet" href="dist/css/mowe.css"/>
-<link rel="stylesheet" href="dist/css/oai.css"/>
+<link rel="stylesheet" href="dist/css/oai.min.css"/>
 <!--[if lt IE 9]>
 <link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
 <script src="dist/js/html5shiv.js"></script>
@@ -249,7 +249,7 @@
 
 </div>
 
-<span class="full-wide bg-cover photo" style="background-image: url('dist/img/largePhotos/TELETOWER-Final.jpg'); background-psosition: 100% 100%; height: 24em; width: 100%; float: left;"></span>
+<span class="full-wide bg-cover photo" style="background-image: url('dist/img/largePhotos/TELETOWER-Final.jpg'); background-psosition: 100% bottom; height: 24em; width: 100%; float: left;"></span>
 
 <div class="text grey-50 font-grey-800">
 
@@ -1049,7 +1049,7 @@
 							</div>
 
 							<div class="ContactForm-field ContactForm-field--address">
-								<input class="phone-text" type="text" size="26" name="tAddress" id="cAddress" maxlength="50"
+								<input class="phone-text" type="text" size="26" name="tAddress" id="cAddress" maxlength="90"
 								       placeholder="Endereço Completo"
 								       title="Ops, o campo deve ser preenchido corretamente :)"
 								       x-moz-errormessage="Ops, o campo deve ser preenchido corretamente :)"/>
