--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			['platina', -22.6338278,-50.2050002]
 		];
 
-		var image = 'img/icon.png';
+		var image = 'dist/img/icon.png';
 
 		var markers = [];
 
