Corrections IMG; form

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 		<div class="text-background-wrapper">
 
-			<img src="img/map_flat.png" alt="" />
+			<img src="dist/img/map_flat.png" alt="dispositivos"/>
 
 		</div>
 
@@ -1041,7 +1041,7 @@
 							</div>
 
 							<div class="ContactForm-field ContactForm-field--email">
-								<input class="email-text" type="email" size="26" name="tEmail" id="cEmail" maxlength="60"
+								<input class="email-text" type="email" size="26" name="tEmail" id="cEmail" maxlength="40"
 								       placeholder="E-mail"
 								       title="Ops, o campo deve ser preenchido corretamente :)"
 								       x-moz-errormessage="Ops, o campo deve ser preenchido corretamente :)"/>
