Add Tag "Todas cidades";

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
 		<div class="text-background-wrapper">
 
-			<img src="img/map_flat.png" alt="" />
+			<img src="dist/img/map_flat.png" alt="" />
 
 		</div>
 
@@ -619,6 +619,11 @@
 					<li class="CitiesItem">
 
 						<a class="CitiesItem-select-area" data-mapLat="-22.6338278" data-mapLng="-50.2050002">Platina, SP</a>
+
+					</li>
+					<li class="CitiesItem">
+
+						<a class="CitiesItem-select-area" data-mapLat="-22.609642" data-mapLng="-50.4577229" data-mapzoom="10">Todas as cidades</a>
 
 					</li>
 
