Insert mobile "Claro"

--- a/index.html
+++ b/index.html
@@ -785,7 +785,6 @@
 
 						<span class="ContactMethodsNavItem-title">Telefone</span>
 
-
 					</a>
 
 				</li>
@@ -819,7 +818,6 @@
 
 						<span class="ContactMethodsNavItem-title">Mensagem</span>
 
-
 					</a>
 
 				</li>
@@ -847,7 +845,7 @@
 
 		<div class="ContactMethodsContent">
 
-			<div id="contact-method-phone" class="ContactMethods-item ContactMethods-item--phone is-actie">
+			<div id="contact-method-phone" class="ContactMethods-item ContactMethods-item--phone is-active">
 
 				<div class="ContactPhone">
 
@@ -1022,13 +1020,30 @@
 
 						</li>
 
+						<li class="ContactPhoneItem">
+
+							<header class="ContactPhoneItem-header">
+
+								<span class="icon icon-mobile"></span>
+
+							</header>
+
+							<section class="ContactPhoneItem-content">
+
+								<span class="ContactPhoneItem-number">18 9 9197 7676</span>
+								<span class="ContactPhoneItem-title">(Claro)</span>
+
+							</section>
+
+						</li>
+
 					</ul>
 
 				</div>
 
 			</div>
 
-			<div id="contact-method-message" class="ContactMethods-item ContactMethods-item--message is-active">
+			<div id="contact-method-message" class="ContactMethods-item ContactMethods-item--message">
 
 				<div class="container flex flex-column align-center">
 
